Fixed responsive CSS background-image

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -55,7 +55,7 @@ we defined our row to be 1140 pixels
     }
 
     .city-feature {
-        font-size: 80%;
+        font-size: 90%;
     }
 
     .plan-box {
@@ -81,6 +81,10 @@ we defined our row to be 1140 pixels
 
     section{
         padding: 30px 0;
+    }
+
+    header {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-mobile.jpg);
     }
 
     .row, .hero-text-box {
@@ -172,7 +176,9 @@ we defined our row to be 1140 pixels
         width: 40%;
     }
 
-}
+    .section-testimonials{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers-mobile.jpg);
+    }
 /* Small Phones: from 0 to 480 pixels */
 @media only screen and (max-width: 480px){
     section {
