--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -196,7 +196,7 @@ input[type=submit]:active {
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-min.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: center center;
     height: 100vh;
     background-attachment: fixed;
 }
