--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -84,7 +84,7 @@ we defined our row to be 1140 pixels
     }
 
     header {
-        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-mobile.jpg);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/download.jpg);
     }
 
     .row, .hero-text-box {
