--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -198,7 +198,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height: 100vh;
+    /*height: 100vh;*/
     background-attachment: fixed;
 }
 
@@ -430,6 +430,7 @@ header {
     background-size: cover;
     color: #fff;
     background-attachment: fixed;
+    background-position: center center;
 }
 
 blockquote {
