--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -197,7 +197,7 @@ header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-min.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: center;
     height: 100vh;
     background-attachment: fixed;
 }
