--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -430,7 +430,7 @@ header {
     background-size: cover;
     color: #fff;
     background-attachment: fixed;
-    background-position: center center;
+    background-position: center;
 }
 
 blockquote {
