--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -84,8 +84,7 @@ we defined our row to be 1140 pixels
     }
 
     header {
-        background-size: 100%;
-        background-size: cover;
+        background-attachment: scroll;
     }
 
     .row, .hero-text-box {
@@ -178,8 +177,7 @@ we defined our row to be 1140 pixels
     }
 
     .section-testimonials{
-        background-size: 100%;
-        background-size: cover;
+        background-attachment: scroll;
     }
 
 /* Small Phones: from 0 to 480 pixels */
